[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitaudit"
version = "1.0.0"
description = "Zero-dependency git repository hygiene auditor"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Kris Kimmerle", email = "kris@example.com"}
]
keywords = ["git", "audit", "repository", "hygiene", "health", "cli"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/kriskimmerle/gitaudit"
Repository = "https://github.com/kriskimmerle/gitaudit"
Issues = "https://github.com/kriskimmerle/gitaudit/issues"

[project.scripts]
gitaudit = "gitaudit:main"
