[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gitaudit"
version = "1.0.0"
description = "Git Repository Health Checker — audit repos for large files, secrets, stale branches, and more"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Kris Kimmerle", email = "kris@kriskimmerle.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
keywords = ["git", "audit", "security", "secrets", "health", "linter", "cli"]

[project.urls]
Homepage = "https://github.com/kriskimmerle/gitaudit"
Repository = "https://github.com/kriskimmerle/gitaudit"
Issues = "https://github.com/kriskimmerle/gitaudit/issues"

[project.scripts]
gitaudit = "gitaudit:main"
