[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gitaudit"
version = "0.1.0"
description = "Git Repository Health & Security Auditor — zero-dependency, 15 rules for secrets, large files, and best practices"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Kris Kimmerle" },
]
keywords = ["git", "security", "audit", "secrets", "repository", "health"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Version Control :: Git",
]
urls = { Homepage = "https://github.com/kriskimmerle/gitaudit" }

[project.scripts]
gitaudit = "gitaudit:main"
